src/test/deca/syntax/invalid/synt/CodePasCompler.deca
// Description:
//    Programme pour tester code avec accolade manquante
//
// Resultats:
//    missing '}' at '<EOF>'
//
// Historique:
//    cree le 01/01/2022


{
     print("nop");
